--- a/index.html
+++ b/index.html
@@ -52,8 +52,52 @@
                         <h6>Wind: <span id="wind"></span> MPH</h6>
                         <h6>UV Index: <span id="uv"></span></h6>
                      </div>
+                     <br>
                      <div id="5-day-view">
-                        Hello World
+                      <strong><h4>5 Day Forcast:</h4></strong>
+                      <div class="row">
+                        <div class="col-md-1">
+                        
+                         </div>
+                        <div class="col-md-2">
+                            <div class="five-day-card" id="one-day-ahead">
+                                <h5 class="date">Today</h5>
+                                <div class="emoji">sun</div>
+                                <p>Temp: <span class="temp"></span>F</p>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="five-day-card" id="two-day-ahead">
+                                <h5 class="date">Today</h5>
+                                <div class="emoji">sun</div>
+                                <p>Temp: <span class="temp"></span>F</p>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="five-day-card" id="three-day-ahead">
+                                <h5 class="date">Today</h5>
+                                <div class="emoji">sun</div>
+                                <p>Temp: <span class="temp"></span>F</p>
+
+                             </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="five-day-card" id="four-day-ahead">
+                               <h5 class="date">Today</h5> 
+                               <div class="emoji">sun</div>
+                               <p>Temp: <span class="temp"></span>F</p>
+
+                             </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="five-day-card" id="five-day-ahead">
+                                 <h5 class="date">Today</h5>
+                                 <div class="emoji">sun</div>
+                                 <p>Temp: <span class="temp"></span>F</p>
+
+                             </div>
+                        </div>
+                      </div>
                      </div>
                 </div>
                 <div class="tab-pane fade" id="v-pills-Chicago" role="tabpanel" aria-labelledby="v-pills-Chicago-tab">
